<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Network Tester</string>

    <string name="dialog_ok">Ok</string>
    
    <string name="start_tests">  Start tests  </string>
    <string name="stop_tests">  Stop tests  </string>
    <string name="value_na">n/a</string>
    <string name="tester_not_tested_expl">Impossible to perform test. Failure with data connection.</string>

    <string name="network_type">Network type: %1$s</string>
    <string name="network_unknown">unknown</string>
    <string name="warning_data_mobile">Warning about data billing, you\'re on mobile network type.</string>
    <string name="warning_data_generic">Warning about data billing, you\'ll be downloading at least one megabyte of data.</string>
    <string name="error_unknown_network_type">Unknown network type. Try to update the app or report this as a bug.</string>            

    <string name="failed">Failed (%1$s)</string>
    <string name="dl_speed">%1$.2f KB/sec</string>
    <string name="dl_too_small">Download file too small. You might not be connected to the real web, or try again later, or try to update the app.</string>

    <string name="host_resolution">Host resolv: </string>
    <string name="host_resolution_expl">Two hostname resolutions are performed on google.com and www.google.com and timing is measured.</string>
    <string name="host_resolved">%1$d then %2$d ms</string>

    <string name="typical_error_unknownhost">Unknown host</string>
    <string name="typical_error_connectiontimeout">Connection timeout</string>
    <string name="typical_error_connectionrefused">Connection refused</string>
    <string name="typical_error_sockettimeout">Data timeout</string>

    <string name="tcp_connection">TCP connect: </string>
    <string name="tcp_connection_expl">Two TCP connections are performed towards www.google.com:80 and timing is measured.</string>
    <string name="tcp_connected">%1$d then %2$d ms</string>

    <string name="timing_test_good">The timing result is considered to be good. Your connection seems pretty fine.</string>
    <string name="timing_test_medium">The timing result is considered to be halfway. Your connection seems ok but not so fast.</string>
    <string name="timing_test_bad">The timing result is considered to be bad. Your connection seems pretty slow.</string>

    <string name="real_web">Real web: </string>
    <string name="real_web_expl">A small dedicated file is downloaded from Network Tester website, and if its content is not correct, it would mean you\'re probably not connected to the real web, but redirected somewhere else like a billing portal (open Wifi hotspot case, needing payment for using).</string>
    <string name="real_web_ok">real web content</string>
    <string name="real_web_fail">fake web content!</string>
    <string name="real_web_ok_expl">A small dedicated file was downloaded from Network Tester website, and its content was correct. So everything\'s fine with your data connection, you\'re connected to the real web, there\'s no filtering or redirecting.</string>
    <string name="real_web_fail_expl">A small dedicated file was downloaded from Network Tester website, and its content was incorrect. You\'re probably not connected to the real web, but redirected somewhere else like a billing portal!</string>

    <string name="_10kb_download">10KB d/l: </string>
    <string name="_100kb_download">100KB d/l: </string>
    <string name="_1mb_download">1MB d/l: </string>
    <string name="_10mb_download">10MB d/l: </string>
    
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_more_information">More Information</string>

    <string name="more_information_none">No network information available, sorry.</string>
        
    <string name="menu_help_content">This small application performs one or a series of simple tests to validate your data connection. You can check/uncheck the boxes in the left column to activate the tests; results will appear in the right part of the screen.</string>
    <string name="menu_about_content">This application is Copyright (c) Guillaume Cottenceau. It is free software under the Apache 2.0 license. Check out the website to access sourcecode.</string>

</resources>
