<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="center">
<LinearLayout android:orientation="vertical"
              android:gravity="center"
              android:layout_width="320dp"
              android:layout_height="fill_parent">
    
  <LinearLayout android:orientation="horizontal"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="4dp">
    <ImageView android:id="@+id/main__image_network_type"
               android:layout_width="32dp" 
               android:layout_height="32dp"
               android:paddingRight="4dp"/>
    <TextView android:id="@+id/main__text_network_type"
              android:layout_width="wrap_content" 
      	      android:layout_height="wrap_content"
    	      android:text="@string/network_type" 
              android:textSize="15sp"
              android:textStyle="bold"/>
  </LinearLayout>

  <Button android:id="@+id/main__button_startstop"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/start_tests"
          android:textSize="15sp"/>

  <ScrollView android:layout_width="fill_parent" 
              android:layout_height="fill_parent"> 

    <LinearLayout android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">

      <!-- Hostname resolution -->
      <RelativeLayout android:layout_width="fill_parent"
	              android:layout_height="wrap_content">
        <LinearLayout android:id="@+id/main__checkbox_and_text_host_resolution"
  		      android:orientation="horizontal"
		      android:layout_width="140dp"
		      android:layout_height="wrap_content"
		      android:layout_alignParentLeft="true">
	  <CheckBox android:id="@+id/main__checkbox_host_resolution"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
                    android:checked="true"/>
	  <TextView android:layout_width="wrap_content" 
    		    android:layout_height="wrap_content"
    		    android:text="@string/host_resolution"/>
        </LinearLayout>
        <RelativeLayout android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_centerVertical="true"
		        android:layout_toRightOf="@id/main__checkbox_and_text_host_resolution">
          <ImageView android:id="@+id/main__image_host_resolution"
  	             android:layout_width="24dp" 
      	             android:layout_height="24dp"
	             android:layout_centerVertical="true"/>
          <TextView android:id="@+id/main__text_host_resolution"
                    android:layout_width="wrap_content" 
    	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
		    android:layout_toRightOf="@id/main__image_host_resolution"
		    android:paddingLeft="5dp"/>
          <ProgressBar android:id="@+id/main__progressbar_host_resolution"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
		       android:layout_centerVertical="true"
                       style="@android:style/Widget.ProgressBar.Small"/>
        </RelativeLayout>
        <ImageView android:id="@+id/main__image_host_resolution_info"
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:layout_centerVertical="true"
                   android:layout_alignParentRight="true"
                   android:src="@drawable/info"/>
      </RelativeLayout>

      <!-- TCP connection -->
      <RelativeLayout android:orientation="horizontal"
	              android:layout_width="fill_parent"
	              android:layout_height="wrap_content">
        <LinearLayout android:id="@+id/main__checkbox_and_text_tcp_connection"
                      android:orientation="horizontal"
		      android:layout_width="140dp"
		      android:layout_height="wrap_content"
		      android:layout_alignParentLeft="true">
          <CheckBox android:id="@+id/main__checkbox_tcp_connection"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
                    android:checked="true"/>
	  <TextView android:layout_width="wrap_content" 
    		    android:layout_height="wrap_content"
    		    android:text="@string/tcp_connection"/>
        </LinearLayout>
        <RelativeLayout android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_centerVertical="true"
		        android:layout_toRightOf="@id/main__checkbox_and_text_tcp_connection">
          <ImageView android:id="@+id/main__image_tcp_connection"
  	             android:layout_width="24dp" 
      	             android:layout_height="24dp"
	             android:layout_centerVertical="true"/>
          <TextView android:id="@+id/main__text_tcp_connection"
                    android:layout_width="wrap_content" 
    	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
		    android:layout_toRightOf="@id/main__image_tcp_connection"
		    android:paddingLeft="5dp"/>
          <ProgressBar android:id="@+id/main__progressbar_tcp_connection"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
		       android:layout_centerVertical="true"
                       style="@android:style/Widget.ProgressBar.Small"/>
        </RelativeLayout>
        <ImageView android:id="@+id/main__image_tcp_connection_info"
                   android:layout_width="20dp"
                   android:layout_height="20dp"
	           android:layout_alignParentRight="true"
	           android:layout_centerVertical="true"
                   android:src="@drawable/info"/>
      </RelativeLayout>

      <!-- Real Web -->
      <RelativeLayout android:orientation="horizontal"
	              android:layout_width="fill_parent"
	              android:layout_height="wrap_content">
        <LinearLayout android:id="@+id/main__checkbox_and_text_real_web"
                      android:orientation="horizontal"
		      android:layout_width="140dp"
		      android:layout_height="wrap_content"
		      android:layout_alignParentLeft="true">
	  <CheckBox android:id="@+id/main__checkbox_real_web"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
                    android:checked="true"/>
	  <TextView android:layout_width="wrap_content" 
    		    android:layout_height="wrap_content"
    		    android:text="@string/real_web"/>
        </LinearLayout>
        <RelativeLayout android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_centerVertical="true"
		        android:layout_toRightOf="@id/main__checkbox_and_text_real_web">
          <ImageView android:id="@+id/main__image_real_web"
  	             android:layout_width="24dp" 
      	             android:layout_height="24dp"
	             android:layout_centerVertical="true"/>
          <TextView android:id="@+id/main__text_real_web"
	            android:layout_width="wrap_content"
    	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
		    android:layout_toRightOf="@id/main__image_real_web"
		    android:paddingLeft="5dp"/>
          <ProgressBar android:id="@+id/main__progressbar_real_web"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
		       android:layout_centerVertical="true"
                       style="@android:style/Widget.ProgressBar.Small"/>
        </RelativeLayout>
        <ImageView android:id="@+id/main__image_real_web_info"
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:layout_alignParentRight="true"
	           android:layout_centerVertical="true"
                   android:src="@drawable/info"/>
      </RelativeLayout>

      <!-- 10KB download -->
      <LinearLayout android:orientation="horizontal"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal"
		      android:layout_width="140dp"
		      android:layout_height="wrap_content">
	  <CheckBox android:id="@+id/main__checkbox_10kb_download"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
                    android:checked="true"/>
	  <TextView android:layout_width="wrap_content" 
    		    android:layout_height="wrap_content"
    		    android:text="@string/_10kb_download"/>
        </LinearLayout>
        <RelativeLayout android:layout_width="180dp"
                        android:layout_height="fill_parent">
          <RelativeLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_centerInParent="true">
              <ProgressBar android:id="@+id/main__progressbar_10kb_download"
 	                   android:layout_width="fill_parent"
	                   android:layout_height="8dp"
                           style="?android:attr/progressBarStyleHorizontal"/>
              <TextView android:id="@+id/main__text_10kb_download"
	                android:layout_width="wrap_content" 
    	                android:layout_height="wrap_content" 
		        android:layout_below="@id/main__progressbar_10kb_download"
                        android:layout_centerHorizontal="true"
    		        android:text="@string/value_na"/>
          </RelativeLayout>
        </RelativeLayout>
      </LinearLayout>

      <!-- 100KB download -->
      <LinearLayout android:orientation="horizontal"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal"
		      android:layout_width="140dp"
		      android:layout_height="wrap_content">
	  <CheckBox android:id="@+id/main__checkbox_100kb_download"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
                    android:checked="true"/>
	  <TextView android:layout_width="wrap_content" 
    		    android:layout_height="wrap_content"
    		    android:text="@string/_100kb_download"/>
        </LinearLayout>
        <RelativeLayout android:layout_width="180dp"
                        android:layout_height="fill_parent">
          <RelativeLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_centerInParent="true">
              <ProgressBar android:id="@+id/main__progressbar_100kb_download"
 	                   android:layout_width="fill_parent"
	                   android:layout_height="8dp"
                           style="?android:attr/progressBarStyleHorizontal"/>
              <TextView android:id="@+id/main__text_100kb_download"
	                android:layout_width="wrap_content" 
    	                android:layout_height="wrap_content" 
		        android:layout_below="@id/main__progressbar_100kb_download"
                        android:layout_centerHorizontal="true"
    		        android:text="@string/value_na"/>
          </RelativeLayout>
        </RelativeLayout>
      </LinearLayout>

      <!-- 1MB download -->
      <LinearLayout android:orientation="horizontal"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal"
		      android:layout_width="140dp"
		      android:layout_height="wrap_content">
	  <CheckBox android:id="@+id/main__checkbox_1mb_download"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"/>
	  <TextView android:layout_width="wrap_content" 
    		    android:layout_height="wrap_content"
    		    android:text="@string/_1mb_download"/>
        </LinearLayout>
        <RelativeLayout android:layout_width="180dp"
                        android:layout_height="fill_parent">
          <RelativeLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_centerInParent="true">
              <ProgressBar android:id="@+id/main__progressbar_1mb_download"
 	                   android:layout_width="fill_parent"
	                   android:layout_height="8dp"
                           style="?android:attr/progressBarStyleHorizontal"/>
              <TextView android:id="@+id/main__text_1mb_download"
	                android:layout_width="wrap_content" 
    	                android:layout_height="wrap_content" 
		        android:layout_below="@id/main__progressbar_1mb_download"
                        android:layout_centerHorizontal="true"
    		        android:text="@string/value_na"/>
          </RelativeLayout>
        </RelativeLayout>
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
</LinearLayout>
</LinearLayout>